# connect-4

./: .gitignore  app.py  connect4.py
connect_4_eval/: .clang-format  CMakeLists.txt  library.cpp
static/: app.js  index.html  style.css  style_input.css
templates/: index.html
